--- a/css/main.css
+++ b/css/main.css
@@ -50,6 +50,9 @@ body {
     padding: 0.25em;
     cursor: move;
     background-color: white;
+    max-width: 10em;
+    min-width: 10em;
+    min-height: 1em;
 }
 
 .text_new_card {
