--- a/react-client/src/main/main.css
+++ b/react-client/src/main/main.css
@@ -1,3 +1,14 @@
 * {
     box-sizing: border-box;
 }
+
+html, body {
+    height: 100%;
+    padding: 0;
+    margin: 0;
+}
+
+#app {
+    height: 100%;
+    width: 100%;
+}
