--- a/react-client/src/components/card/card.css
+++ b/react-client/src/components/card/card.css
@@ -2,21 +2,68 @@
     border: 1px solid black;
     padding: 0.5em;
     border-radius: 0.5em;
-    overflow: auto;
     display: flex;
     flex-direction: column;
+
+    animation-name: pulse;
+    animation-duration: 0.4s;
+    animation-iteration-count: 1;
+    animation-timing-function: ease-in-out;
+}
+
+@keyframes pulse {
+    0% {
+        background-color: orange;
+    }
+    100% {
+        background-color: rgba(255, 255, 255, 0);
+    }
 }
 
 .card-title {
     flex: 1;
+    overflow: auto;
 }
 
 .card-move-count {
     background-color: lightgray;
-    text-align: right;
     padding: 0.25em;
+    flex-shrink: 0;
 }
 
 .card-history {
+    flex-shrink: 0;
+}
+
+.card-history.hidden {
     display: none;
+}
+
+.card-delete-button {
+    text-align: right;
+    display: inline;
+    position: relative;
+    height: 0;
+    top: 0.2em;
+    left: -0.2em;
+    flex-shrink: 0;
+}
+
+.card.dragging {
+    opacity: 0.5;
+    background-color: lightblue;
+}
+
+.card.warning {
+    background-color: pink;
+    animation-name: pulse-warning;
+}
+
+@keyframes pulse-warning {
+    0% {
+        background-color: orange;
+    }
+    100% {
+        background-color: pink;
+    }
 }
